更新脚本，进一步精简